# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: mainkaavio.md
src/: deck.py  flash_card.py  index.py  json_helpers.py  ui.py
src/entities/: deck.py  flash_card.py
src/services/: json_helpers.py
src/tests/: deck_test.py  flash_card_test.py  json_helpers_test.py  multiple_choice_flashcard_test.py
src/ui/: answer_card_view.py  card_selection_view.py  card_view.py  create_card_view.py  create_deck_view.py  decks_view.py  menu_view.py  ui.py  ui_utils.py
