[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Leevi <leevitukia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.8.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
